2005-10-05  Timothy Hatcher  <timothy@apple.com>

        Merged fix from TOT to Safari-2-0-branch

    2005-10-04  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Eric.

	    <rdar://problem/4285236> Denver Regression: crash repeatedly reloading www.supermanhomepage.com
	
	    I couldn't figure out how to make a reproducible test case for this. The failure is
	    random memory trashing.

        * khtml/ecma/kjs_events.cpp:
        (KJS::JSAbstractEventListener::handleEvent):

2005-10-03  Timothy Hatcher  <timothy@apple.com>

        Merged fix from TOT to Safari-2-0-branch

    2005-10-03  Justin Garcia  <justin.garcia@apple.com>

		Fixes <rdar://problem/4275492> REGRESSION (SuTiDenver): EMBED tag with bogus type attribute downloads .wmv file twice (gorillamask.net)

        Reviewed by geoff, darin

        * khtml/khtml_part.cpp:
        (KHTMLPart::handleFallbackContent):
        Don't handle fallback content for <embed> tags.

=== WebCore-417.2 ===

2005-09-29  Timothy Hatcher  <timothy@apple.com>

        Merge over of various leak fixes from TOT to Safari-2-0-branch

    2005-09-29  Timothy Hatcher  <timothy@apple.com>

        Fixes build failures on a future release train.

        Reviewed by Maciej.

        Test cases added: (None needed.)

        * kwq/KWQPointArray.h: check if NSPoint is the same as CGPoint
        * kwq/KWQRect.h: check if NSRect is the same as CGRect
        * kwq/KWQSize.h: check if NSSize is the same as CGSize

=== WebCore-417.1 ===

2005-09-28  Timothy Hatcher  <timothy@apple.com>

        Merge over of various leak fixes from TOT to Safari-2-0-branch

        <rdar://problem/4231952> leaks of DOMStringImpl called from HTMLTokenizer::processToken, seen running WebKit tests
        <rdar://problem/4231978> many leaks of StyleSurroundData called beneath RenderStyle::setMarginTop, seen running webkit tests